[package]
name = "inflate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cjk = "0.2.5"
clap = { version = "4.4.18", features = ["derive"] }
sqlite = "0.32.0"
tempfile = "3.9.0"
zip = "0.6.6"
