[package]
name = "inflate_anki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cjk = "0.2.5"
clap = { version = "4.4.18", features = ["derive"] }
rusqlite = "0.25.0" # Needed to be compatible with the upstream genanki-rs v0.4.0 
tempfile = "3.9.0"
zip = "0.6.6"
zw_to_anki = { git = "https://github.com/jacksonriley/zw_to_anki" }
